--- a/DSA06-List/DSA_2017_06.tex
+++ b/DSA06-List/DSA_2017_06.tex
@@ -99,12 +99,12 @@ free(pf);
 \begin{frame}[t]
   \frametitle{Singly Linked Lists}
   \begin{itemize}
-  \item compose of data part and link part
-  \item link part contains address of the
+  \item Compose of data part and link part
+  \item Link part contains address of the
 next element in a list
-  \item non-sequential representations
-  \item size of the list is not predefined
-  \item dynamic storage allocation and deallocation
+  \item Non-sequential representations
+  \item Size of the list is not predefined
+  \item Dynamic storage allocation and deallocation
   \end{itemize}
 
 \includegraphics[width=0.9\textwidth]{figures/fig01_single.png}
@@ -142,9 +142,9 @@ To delete \texttt{mat} from the list
 
 \includegraphics<4>[width=0.9\textwidth]{figures/fig03_single_delete2.png}
 \begin{enumerate}
-\item<2-> find the element that immediately precedes \texttt{mat}, which is cat
-\item<3-> set its link to point to \texttt{mat}'s link
-\item<4-> free the \texttt{mat}'s node
+\item<1-> Find the element that immediately precedes \texttt{mat}, which is cat
+\item<2-> Set its link to point to \texttt{mat}'s link
+\item<3-> Free the \texttt{mat}'s node
 \end{enumerate}
 \end{frame}
 
@@ -158,6 +158,7 @@ To delete \texttt{mat} from the list
 
       There is no data movement in insert and delete operation
 
+
 \bigskip
     \end{center}
 
@@ -167,12 +168,13 @@ To delete \texttt{mat} from the list
 \begin{frame}[t]
   \frametitle{Singly Linked List: Features}
   
-required capabilities to make linked representations possible
+Required capabilities to make linked representations possible
+begin{itemize}
 \begin{itemize}
-\item a mechanism for defining a node’s structure, that is, the
+\item A mechanism for defining a node’s structure, that is, the
   field it contains
-\item a way to create new nodes when we need them
-\item a way to remove nodes that we no longer need
+\item A way to create new nodes when we need them
+\item A way to remove nodes that we no longer need
 \end{itemize}
 
 \end{frame}
@@ -243,12 +245,12 @@ head->next=second;
 \begin{frame}[t, fragile]
   \frametitle{Singly Linked List: Implementation}
   \begin{itemize}
-  \item data structure
-  \item insert a node
-  \item delete the list
-  \item remove a node
-  \item search
-  \item print
+  \item Data structure
+  \item Insert a node
+  \item Delete the list
+  \item Remove a node
+  \item Search
+  \item Print
   \end{itemize}
 
   \begin{ncodedef}
@@ -276,7 +278,7 @@ void print_list(node_t * head) {
 \bigskip
   \begin{itemize}
   \item Create a pointer that iterates the list
-  \item print the data in the list.
+  \item Print the data in the list.
   \item Repeat until the pointer reaches the end of the list
     (the next node in \texttt{NULL})
   \end{itemize}
@@ -302,9 +304,9 @@ void insert_tail(node_t * head, int data) {
 \bigskip
   \begin{itemize}
   \item Iterate the list using a pointer to find the end of the list
-  \item add a new node at the end of the list
-  \item add the data
-  \item mark next node as \texttt{NULL}
+  \item Add a new node at the end of the list
+  \item Add the data
+  \item Mark next node as \texttt{NULL}
   \end{itemize}
 
 \end{frame}
@@ -324,9 +326,9 @@ void insert_head(node_t ** head, int data) {
 \end{ncodedef}
 \bigskip
 \begin{itemize}
-\item create a new node with data
-\item link the new node to point to the head of the list
-\item set the head of the list with the new node
+\item Create a new node with data
+\item Link the new node to point to the head of the list
+\item Set the head of the list with the new node
 \end{itemize}
 
 \end{frame}
@@ -362,10 +364,10 @@ int remove_head(node_t ** head) {
 }  
 \end{ncodedef}
 \begin{itemize}
-\item select the next item that head points
-\item save it as a new head
-\item free the head
-\item use the new head as the head of the list
+\item Select the next item that head points
+\item Save it as a new head
+\item Free the head
+\item Use the new head as the head of the list
 \end{itemize}
 \end{frame}
 
@@ -487,14 +489,14 @@ stack_ptr top[MAX_STACKS];
         \begin{itemize}
         \item \texttt{top[i] = NULL, \\0 $\leq$ i $\leq$ MAX\_STACKS}
         \end{itemize}
-      \item boundary condition for \texttt{n} stacks
+      \item Boundary condition for \texttt{n} stacks
         \begin{itemize}
-        \item empty condition
+        \item Empty condition
           \begin{itemize}
           \item \texttt{top[i] = NULL} \\iff the $i^{th}$ stack is empty
           \end{itemize}
 
-        \item full condition
+        \item Full condition
           \begin{itemize}
           \item \texttt{IS\_FULL(temp)} \\iff the memory is full
           \end{itemize}
@@ -564,13 +566,13 @@ queue_ptr front[MAX_QUEUES],
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{itemize}
-      \item initial condition for queue
+      \item Initial condition for queue
         \begin{itemize}
         \item \texttt{front[i] = NULL, \\0 $\leq$ i $\leq$ MAX\_QUEUES}
         \end{itemize}
-      \item boundary condition for queues
+      \item Boundary condition for queues
         \begin{itemize}
-        \item empty condition
+        \item Empty condition
           \begin{itemize}
           \item \texttt{front[i] = NULL} \\iff the $i^{th}$ queue is empty
           \end{itemize}
@@ -640,9 +642,9 @@ element delete(queue_ptr *pfront) {
   \frametitle{Representing Stack and Queues by Linked List}
 Advantages are
 \begin{itemize}
-\item no data movement is necessary: O(1) operation
-\item no full condition check is necessary
-\item size is growing and shrinking dynamically
+\item No data movement is necessary: O(1) operation
+\item No full condition check is necessary
+\item Size is growing and shrinking dynamically
 \end{itemize}
 
 
@@ -654,18 +656,18 @@ Advantages are
   \frametitle{Doubly Linked Lists}
 Problems of singly linked lists
 \begin{itemize}
-\item  move to only one way direction
-\item hard to find the previous node
-\item hard to delete the arbitrary node
+\item Move to only one way direction
+\item Hard to find the previous node
+\item Hard to delete the arbitrary node
 \end{itemize}
 
 
 \bigskip
-doubly linked circular list
+Doubly linked circular list
 \begin{itemize}
-\item doubly lists + circular lists
-\item allow two links
-\item two way direction
+\item Doubly lists + circular lists
+\item Allow two links
+\item Two way direction
 \end{itemize}
 
 
@@ -692,7 +694,7 @@ typedef struct node {
 
 \begin{frame}[t, fragile]
   \frametitle{Doubly Linked Lists}
-suppose that \texttt{ptr} points to any node in a doubly linked list
+Suppose that \texttt{ptr} points to any node in a doubly linked list
 
 \begin{ncodedef}
 ptr 
@@ -707,11 +709,11 @@ ptr->rlink->llink
 
 \begin{frame}[t]
   \frametitle{Doubly Linked Lists}
-introduce dummy node, called, head
+Introduce dummy node, called, head
 \begin{itemize}
-\item to represent empty list
-\item make easy to implement operations 
-\item contains no information in item field
+\item To represent empty list
+\item Make easy to implement operations 
+\item Contains no information in item field
 \end{itemize}
 \bigskip
 \begin{figure}
@@ -745,7 +747,7 @@ void d_insert(node_ptr node, node_ptr newnode) {
 }    
   \end{ncodedef}
 
-time complexity O(1)
+Time complexity O(1)
 \end{frame}
 
 \begin{frame}[t]
@@ -788,8 +790,8 @@ Deletion in a doubly linked circular list
 \begin{frame}[t]
   \frametitle{Notes on doubly linked circular list}
   \begin{itemize}
-  \item don't have to traverse a list - time complexity of O(1)
-  \item insert(delete) front/middle/rear is all the same
+  \item Don't have to traverse a list - time complexity of O(1)
+  \item Insert(delete) front/middle/rear is all the same
   \end{itemize}
 \end{frame}
 
