--- a/DSA08-Graph/DSA_2017_08.tex
+++ b/DSA08-Graph/DSA_2017_08.tex
@@ -332,10 +332,11 @@ N = 1 & N = 2 & N = 3 & N = 4
 
 \begin{frame}[t]
   \frametitle{Number of Edges in Undirected Graph}
+  %typo revised -14p KSS-
   \begin{itemize}
   \item Each edge is of the form $(u, v)$, and $u \neq v$
   \item Number of such pairs in an n vertex graph is $n(n-1)$.
-  \item Since edge $(u,v)$ is the same as edge $(v,u)$, the number of edges in a complete undirected graph is $\frac{n(n-1)}{2}$.
+  \item Since edge $(u,v)$ is the same as edge $(v,u)$ the number of edges in a complete undirected graph is $\frac{n(n-1)}{2}$.
   \item Number of edges in an undirected graph is $\leq \frac{n(n-1)}{2}$.
   \end{itemize}
 \end{frame}
@@ -355,9 +356,10 @@ number of edges in a complete directed graph is $n(n-1)$.
 
 \begin{frame}[t]
   \frametitle{Vertex Degree}
+  %typo revised, Degree(5) =3 -> =4 -15p KSS-
   \begin{itemize}
   \item \textbf{Vertex Degree} is the number of edges incident to that vertex
-  \item Degree(2) = 2, Degree(5) =3, Degree(3) = 1, 
+  \item Degree(2) = 2, Degree(5) =4, Degree(3) = 1, 
   \end{itemize}
   \begin{center}
     \begin{tikzpicture}
@@ -437,7 +439,8 @@ number of edges in a complete directed graph is $n(n-1)$.
   \frametitle{Out-Degree of a Vertex}
   \begin{itemize}
   \item Out-degree of a vertex is the number of outbound edges
-  \item Out-degree(2) = 1, out=degree(8) = 2
+%typo revised -18p KSS-
+  \item Out-degree(2) = 1, out-degree(8) = 2
   \end{itemize}
   \begin{center}
     \begin{tikzpicture}
