--- a/DSA09-Graph2/DSA_2017_09.tex
+++ b/DSA09-Graph2/DSA_2017_09.tex
@@ -335,7 +335,7 @@ Connected Graph
     \end{tikzpicture}
 \end{center}
 \end{frame}
-
+%typo revised, Compnents -> Components -14p KSS-
 \begin{frame}[t]
   \frametitle{Connectedness}
 There are two types of connected components in digraphs
@@ -344,7 +344,7 @@ There are two types of connected components in digraphs
   \begin{itemize}
   \item maximal subgraph in which there is a path from every vertex to every vertex following all the edges in the direction they are pointing
   \end{itemize}
-\item Weak Compnents
+\item Weak Components
   \begin{itemize}
   \item maximal subgraph which would be connected if we ignore the direction of the edges
   \end{itemize}
@@ -561,10 +561,10 @@ A tree can be thought of as connected graph that has no cycles
 \begin{frame}[t]
   \frametitle{Minimum-Cost Spanning Tree}
   \begin{itemize}
-  \item weighted connected undirected graph
-  \item spanning tree
-  \item cost of spanning tree is sum of edge costs
-  \item find spanning tree that has minimum cost
+  \item Weighted connected undirected graph
+  \item Spanning tree
+  \item Cost of spanning tree is sum of edge costs
+  \item Find spanning tree that has minimum cost
   \end{itemize}
 \end{frame}
 
