--- a/DSA07-Tree/DSA_2017_07.tex
+++ b/DSA07-Tree/DSA_2017_07.tex
@@ -76,24 +76,24 @@ It has a hierarchical structure
   \begin{description}
   \item[\textbf{Root}] A node with no parent (e.g., A is the root)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_root.png}
-  \item[\textbf{edge}] The connecting link between any two nodes (e.g., link between A and B is edge)\\
+  \item[\textbf{Edge}] The connecting link between any two nodes (e.g., link between A and B is edge)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_edge.png}
-  \item[\textbf{parent}] a node that has subtrees (e.g., A is parent of B, C, and D. E is parent of K and L)\\
+  \item[\textbf{Parent}] A node that has subtrees (e.g., A is parent of B, C, and D. E is parent of K and L)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_parent.png}
-  \item[\textbf{child}] a root of the subtrees (e.g., E is child of B, C is child of A)\\
+  \item[\textbf{Child}] A root of the subtrees (e.g., E is child of B, C is child of A)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_children.png}
-  \item[\textbf{sibling}] child nodes of the same parent (e.g., B, C, and D are siblings, K, L, and M are siblings)\\
+  \item[\textbf{Sibling}] Child nodes of the same parent (e.g., B, C, and D are siblings, K, L, and M are siblings)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_sibling.png}
   \item[\textbf{Leaf (terminal, external) node}] A node with degree
     zero (e.g., K, L, F, G, M, I, and J)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_leaf.png}
   \item[\textbf{Internal (non-terminal, internal) node}] node with
     degree one or more (e.g., A, B, C, D, E, and H)
-  \item[\textbf{ancestor}] all the nodes along the path from the root
+  \item[\textbf{Ancestor}] All the nodes along the path from the root
     to the node (e.g., ancestor of K is E, B, and A. Ancestor of H
     is D, and A)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_ancestor.png}
-  \item[\textbf{descendant}] all the nodes that are in its subtrees
+  \item[\textbf{Descendant}] All the nodes that are in its subtrees
     (e.g., Descendants of E is K, and L. Descendants of D is H,
     M, I, and J)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_descendant.png}
@@ -103,30 +103,30 @@ It has a hierarchical structure
   \item[\textbf{Degree of a tree}] The maximum degree of the nodes in
     the tree (e.g., the degree of the tree is 3)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_degree.png}
-  \item[\textbf{level}] each step from top to bottom, the level of the
+  \item[\textbf{Level}] Each step from top to bottom, the level of the
     root node is 0 (e.g., level of F is 2. Level of M is 3)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_level.png}
-  \item[\textbf{path}] the set of edges from the root to a node (e.g.,
+  \item[\textbf{Path}] The set of edges from the root to a node (e.g.,
     the path to M from A is (A, D), (D, H), (H, M))
-  \item[\textbf{path length}] The number of edges in a path (e.g.,
+  \item[\textbf{Path length}] The number of edges in a path (e.g.,
     path length from A to M is 3)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_path.png}
   \item[\textbf{Height of a tree}] The longest path length from the
     root to a leaf (e.g., the height is 3)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_height.png}
-\newpage  \item[\textbf{depth}] the total number of edges from root node to a
+\newpage  \item[\textbf{Depth}] The total number of edges from root node to a
     particular node (e.g., depth of F is 2. Depth of M is 3)
-  \item[\textbf{depth of the tree}] the total number of edges from
+  \item[\textbf{Depth of the tree}] The total number of edges from
     root node to a leaf node in the longest path (e.g., depth of the
     tree is 3)\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_depth.png}
-  \item[\textbf{subtree}] each child from a node forms a subtree
+  \item[\textbf{Subtree}] Each child from a node forms a subtree
     recursively. Every child node will form a subtree on its parent
     node\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_subtree.png}
-\item[\textbf{proper (or full) tree}] every node other than the leaves has non-void children\\
+\item[\textbf{Proper (or full) tree}] Every node other than the leaves has non-void children\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_full.png}
-\item[\textbf{complete tree}] All levels are full except for the deepest level, which is partially filled from the left\\
+\item[\textbf{Complete tree}] All levels are full except for the deepest level, which is partially filled from the left\\
 \includegraphics[height=0.3\textheight]{./figures/fig02_def_complete.png}
   \end{description}
 \end{frame}
@@ -158,10 +158,10 @@ The information in the root node comes first and it is followed by a list of the
 
 \begin{frame}[t]
   \frametitle{Left-child Right-Sibling Representation}
-nodes of a fixed size
+Nodes of a fixed size
 \begin{itemize}
-\item easier to work
-\item two link / pointer fields and a data field per node
+\item Easier to work
+\item Two link / Pointer fields and a data field per node
   \begin{itemize}
   \item left reference field stores the address of the left child
   \item right reference field stores the address of the right sibling node
@@ -188,7 +188,7 @@ nodes of a fixed size
   \frametitle{Representation of trees}
 Changing a representation of a tree as a degree two tree
 \begin{itemize}
-\item simply rotate the left-child right-sibling tree clockwise by 45 degrees
+\item Simply rotate the left-child right-sibling tree clockwise by 45 degrees
 \end{itemize}
 
 A tree with degree 2 (two children, left and right child) is called a binary tree
@@ -206,8 +206,8 @@ A tree with degree 2 (two children, left and right child) is called a binary tre
   \frametitle{Definition}
 A binary Tree is a finite set of nodes such that
 \begin{enumerate}
-\item empty or
-\item consists of root note and two disjoint binary trees, called left subtree and right subtree
+\item Empty or
+\item Consists of root note and two disjoint binary trees, called left subtree and right subtree
 \end{enumerate}
 
 
@@ -238,22 +238,22 @@ Difference between a binary tree and a tree
 \begin{frame}[t, allowframebreaks]
   \frametitle{Special Types of Binary Trees}
   \begin{itemize}
-  \item skewed binary tree \\
+  \item Skewed binary tree \\
      \includegraphics[height=0.3\textheight]{figures/fig06_skewed.png}
 \newpage
 ~\bigskip
-  \item full binary tree (of depth k) 
+  \item Full binary tree (of depth k) 
     \begin{description}
-    \item[\textbf{full (or proper or strictly binary tree}] every node has either two or zero number of children \\
+    \item[\textbf{Full (or proper or strictly binary tree}] Every node has either two or zero number of children \\
  
         \includegraphics[height=0.3\textheight]{figures/fig06_full.png}
  
 \newpage
 ~\bigskip
     \end{description}
-  \item complete binary tree 
+  \item Complete binary tree 
     \begin{description}
-    \item[\textbf{complete (or perfect) binary tree}] A binary tree in which every internal node has exactly two children and all leaf nodes are at same level
+    \item[\textbf{Complete (or perfect) binary tree}] A binary tree in which every internal node has exactly two children and all leaf nodes are at same level
 a binary tree with n nodes that
       correspond to the nodes numbered from 1 to n in the full binary
       tree of depth k\\
@@ -280,14 +280,13 @@ There are two methods to represent the binary tree
 \begin{frame}[t]
   \frametitle{Array Representation}
   \begin{itemize}
-  \item sequential representations
-  \item determine the locations of the parent, left child, and right
+  \item Sequential representations
+  \item Determine the locations of the parent, left child, and right
     child of any node i in the binary tree
     \begin{enumerate}
-    \item parent (i) is at $\lfloor i/2 \rfloor$ if $i \neq 1$, if $i = 1$, no parent
-    \item left\_child (i) is at $2 \cdot i$ if $2i \leq n$
-    \item right\_child (i) is at $2 \cdot i + 1$ if $2 \cdot i+1 \leq n$
-
+    \item Parent (i) is at $\lfloor i/2 \rfloor$ if $i \neq 1$, if $i = 1$, no parent
+    \item Left\_child (i) is at $2 \cdot i$ if $2i \leq n$
+    \item Right\_child (i) is at $2 \cdot i + 1$ if $2 \cdot i+1 \leq n$
     \end{enumerate}
         \includegraphics[height=0.5\textheight]{figures/fig07_skewed_array.png}
   \end{itemize}
@@ -299,10 +298,10 @@ There are two methods to represent the binary tree
 \begin{frame}[t]
   \frametitle{The Problem of Array Representation of Tree}
   \begin{itemize}
-  \item inefficient storage utilization \\
+  \item Inefficient storage utilization \\
         $S(n) = 2 -1$ where k is  depth of binary tree\\
          ideal for complete binary trees
-  \item hard to insert/delete
+  \item Hard to insert/delete
   \end{itemize}
 
 \end{frame}
@@ -312,11 +311,11 @@ There are two methods to represent the binary tree
   \frametitle{Linked List representation}
 Representing tree with linked list
 \begin{itemize}
-\item each node has three fields
+\item Each node has three fields
   \begin{enumerate}
-  \item left\_child
-  \item data
-  \item right\_child
+  \item Left\_child
+  \item Data
+  \item Right\_child
   \end{enumerate}
 \end{itemize}
 
@@ -342,7 +341,7 @@ Skewed
     \includegraphics[height=0.3\textheight]{figures/fig08_linked_list_skewed.png}
   \end{center}
 
-complete 
+Complete 
   \begin{center}
 \vspace{-1em}
     \includegraphics[height=0.4\textheight]{figures/fig08_linked_list_complete.png}
@@ -353,7 +352,7 @@ complete
 
 \begin{frame}[t]
   \frametitle{Linked List Representation cont'd}
-leaf node's link field contains NULL pointer
+Leaf node's link field contains NULL pointer
 
   \begin{center}
 \vspace{-1em}
@@ -373,9 +372,9 @@ Add a fourth field, called parent, to know the parent of a random nodes
 \begin{frame}[t]
   \frametitle{Tree Representation}
   \begin{itemize}
-  \item each node in a tree has a variable sized nodes
-  \item hard to represent it by using array
-  \item use linked list to represent a tree needs $k$ link fields per node
+  \item Each node in a tree has a variable sized nodes
+  \item Hard to represent it by using array
+  \item Use linked list to represent a tree needs $k$ link fields per node
     \begin{itemize}
     \item  $k$ is the degree of tree
     \end{itemize}
@@ -385,7 +384,7 @@ Add a fourth field, called parent, to know the parent of a random nodes
     \item non-null links
     \item null links
     \end{itemize}
-  \item if the number of non-null links are $n-1$
+  \item If the number of non-null links are $n-1$
     \begin{itemize}
     \item the number of null links are $n \cdot k - (n-1)$
     \end{itemize}
@@ -403,7 +402,7 @@ Add a fourth field, called parent, to know the parent of a random nodes
       $\rightarrow$ (parent, leftmost-child, next-right-sibling)
     \end{itemize}
 
-   \item simply rotate the left-child right-sibling tree clockwise by 45 degrees
+   \item Simply rotate the left-child right-sibling tree clockwise by 45 degrees
      \begin{itemize}
      \item right field of root node always have null link
      \item null links: approximately 50$\%$
@@ -426,14 +425,14 @@ Add a fourth field, called parent, to know the parent of a random nodes
 \section{Binary Tree Traversal and Other Operations}
 \begin{frame}[t]
   \frametitle{Binary Tree Traversals}
-visit each node in the tree exactly once
+Visit each node in the tree exactly once
 \begin{itemize}
-\item produce a linear order for the information in a tree
-\item what order?
+\item Produce a linear order for the information in a tree
+\item What order?
   \begin{itemize}
-  \item inorder: LVR (Left Visit Right)
-  \item preorder: VLR (Visit Left Right)
-  \item postorder: LRV (Left Right Visit)
+  \item Inorder: LVR (Left Visit Right)
+  \item Preorder: VLR (Visit Left Right)
+  \item Postorder: LRV (Left Right Visit)
   \end{itemize}
 \end{itemize}
 
@@ -443,6 +442,7 @@ visit each node in the tree exactly once
 \begin{frame}[t]
   \frametitle{Binary Tree Traversals}
 $A/B*C*D+E$ (infix form)
+% revised 17 D -> E -42p KSS-
   \begin{center}
     \includegraphics[width=0.8\textwidth]{figures/fig10_infix.png}
   \end{center}
@@ -463,11 +463,11 @@ void inorder(TreeNode *ptr) {
     } 
 }  
 \end{lstlisting}
-inorder is invoked 19 times for the complete traversal: 19 nodes
+Inorder is invoked 19 times for the complete traversal: 19 nodes
 
-output: $A/B*C*D+E$
+Output: $A/B*C*D+E$
 \begin{itemize}
-\item  corresponds to the infix form
+\item  Corresponds to the infix form
 \end{itemize}
 
 \end{frame}
@@ -524,7 +524,7 @@ void postorder(TreeNode *ptr) {
 }  
 \end{lstlisting}
 
-output in the order $AB/C*D*E+$
+Output in the order $AB/C*D*E+$
 
 \end{frame}
 
@@ -533,15 +533,15 @@ output in the order $AB/C*D*E+$
   \frametitle{Iterative Inorder Traversal}
 Recursion
 \begin{itemize}
-\item call itself directly or indirectly
-\item simple, compact expression: good
+\item Call itself directly or indirectly
+\item Simple, compact expression: good
 readability
-\item don’t need to know implementation
+\item Don’t need to know implementation
 details
-\item much storage: multiple activations
-exist internally
-\item  slow execution speed
-\item  application: factorial, Fibonacci
+\item Much storage: multiple activations
+exist Internally
+\item Slow execution speed
+\item Application: factorial, Fibonacci
 number, tree traversal, binary search, tower of Hanoi, quick sort, LISP structure
 \end{itemize}
 \end{frame}
@@ -570,11 +570,11 @@ void iter_inorder(tree_ptr node) {
 
 \begin{frame}[t]
   \frametitle{Iterative Inorder Traversal}
-every node of the tree is placed on and removed from the stack exactly once
+Every node of the tree is placed on and removed from the stack exactly once
 
 \begin{itemize}
-\item time complexity: O(n) where n is the number of nodes in the tree
-\item space complexity: stack size O(n) where n is worst case depth of the
+\item Time complexity: O(n) where n is the number of nodes in the tree
+\item Space complexity: stack size O(n) where n is worst case depth of the
   tree (case of skewed binary tree)
 \end{itemize}
 
@@ -673,9 +673,9 @@ int equal(tree_ptr first, tree_ptr second) {
 \begin{frame}[t]
   \frametitle{Representation of MAX (or MIN) heaps}
   \begin{itemize}
-  \item array representation because heap is a complete binary tree
+  \item Array representation because heap is a complete binary tree
 
-  \item simple addressing scheme for parent, left(right) child
+  \item Simple addressing scheme for parent, left(right) child
   \end{itemize}
 
 \end{frame}
@@ -723,9 +723,9 @@ void init(HeapType *h){
 \begin{frame}[t]
   \frametitle{Priority Queues}
   \begin{description}
-  \item [\textbf{deletion}] deletes the element with the highest(or
+  \item [\textbf{Deletion}] Deletes the element with the highest(or
     the lowest) priority
-  \item [\textbf{insertion}] insert an element with arbitrary priority
+  \item [\textbf{Insertion}] Insert an element with arbitrary priority
     into a priority queue at any time
   \end{description}
 Ex. Job scheduling of OS
@@ -753,8 +753,8 @@ max heap & O($log_2n$) &  O($log_2n$) \\
   \frametitle{Insertion into a max heap}
 Need to go from a node to its parent
 \begin{itemize}
-\item linked representation add a parent field to each node
-  \item array representation a heap is a complete binary tree simple
+\item Linked representation add a parent field to each node
+  \item Array representation a heap is a complete binary tree simple
     addressing scheme
 \end{itemize}
 \end{frame}
@@ -787,11 +787,11 @@ Insert 35 into heap
 \begin{frame}[t]
   \frametitle{Insertion into a max heap}
   \begin{itemize}
-  \item select the initial location for the node to be inserted $\rightarrow$
+  \item Select the initial location for the node to be inserted $\rightarrow$
     bottommost-rightmost leaf node
-  \item insert a new key value adjust key
+  \item Insert a new key value adjust key
     value from leaf to root parent position: $\lfloor i/2 \rfloor$
-  \item time complexity :
+  \item Time complexity :
     $O(depth of tree) ~\rightarrow~ O(log_2n)$
   \end{itemize}
 \end{frame}
@@ -820,15 +820,16 @@ void insert_max_heap(HeapType *h, element item){
 \end{frame}
 
 
+
+%typo revised -72p KSS-
 \begin{frame}[t]
   \frametitle{Deletion from a max heap}
   \begin{itemize}
-  \item always delete an element from the root of the heap
-  \item restructure the tree so that it corresponds to a complete binary tree
-  \item place the last node to the root and from the root compare the parent node with its children and exchanging out-of-order elements until the heap is reestablished
+  \item Always delete an element from the root of the heap
+  \item Restructure the tree so that it corresponds to a complete binary tree
+  \item Place the last node to the root and from the root compare the parent node with its children and exchanging out-of-order elements until the heap is restablished
   \end{itemize}
 \end{frame}
-
 
 \begin{frame}[t]
   \frametitle{Deletion from a max heap}
@@ -857,12 +858,12 @@ Final heap
 \begin{frame}[t]
   \frametitle{Deletion from a max heap}
   \begin{itemize}
-  \item select the removed node bottommost-rightmost leaf node
-  \item place the node’s element in the root node
-  \item adjust key value
+  \item Select the removed node bottommost-rightmost leaf node
+  \item Place the node’s element in the root node
+  \item Adjust key value
     from root to leaf compare the parent node with its children and
     exchange out-of-order elements until the heap is reestablished -
-  \item time complexity : $O(depth~of~ tree) \rightarrow~ O(log_2n)$
+  \item Time complexity : $O(depth~of~ tree) \rightarrow~ O(log_2n)$
   \end{itemize}
 
 \end{frame}
@@ -915,12 +916,12 @@ element delete_max_heap(HeapType *h){
 Binary search tree(BST) is a binary tree that is empty or each
 node satisfies the following properties:
 \begin{enumerate}
-\item every element has a key, and no two elements have the same key
-\item the keys in a nonempty left subtree must be smaller than the key
+\item Every element has a key, and no two elements have the same key
+\item The keys in a nonempty left subtree must be smaller than the key
   in the root of the subtree
-\item the keys in a nonempty right subtree
+\item The keys in a nonempty right subtree
   must be larger than the key in the root of the subtree
-\item the left and right subtrees are also BST
+\item The left and right subtrees are also BST
 \end{enumerate}
 
 \end{frame}
@@ -950,11 +951,11 @@ BST
   \frametitle{Operations and their Complexity}
 Searching, Insertion, Deletion is bounded by $O(h)$ where h is the height of the BST
 
-can perform these operations both
+Can perform these operations both
 \begin{itemize}
-\item by key value and\\
+\item By key value and\\
       e.g., delete the element with key x
-\item by rank\\
+\item By rank\\
       e.g., delete the fifth smallest element
 \end{itemize}
 \end{frame}
@@ -1081,12 +1082,12 @@ int main(){
 
 
 \begin{itemize}
-\item return NULL, if the tree is empty or num is present
-\item otherwise, return a pointer to the last node of the tree that
+\item Return NULL, if the tree is empty or num is present
+\item Otherwise, return a pointer to the last node of the tree that
   was encountered during the search
 \end{itemize}
 
-time complexity for inserting
+Time complexity for inserting
 \begin{itemize}
 \item  $O(h)$, where h is the height of the tree
 \end{itemize}
@@ -1116,16 +1117,15 @@ Insert 35
 
 \begin{frame}[t]
   \frametitle{Deleting from  BST}
-deletion of a leaf node
+Deletion of a leaf node
 \begin{itemize}
-\item deletion of a node with 1 child
-\item deletion of a node with 2
-  children
+\item Deletion of a node with 1 child
+\item Deletion of a node with 2 children
 \end{itemize}
 
 
 
-time complexity for deleting
+Time complexity for deleting
 \begin{itemize}
 \item $O(h)$ where h is the height of the tree
 \end{itemize}
@@ -1170,10 +1170,10 @@ Tree after deletion of 60
 
 \begin{frame}[t]
   \frametitle{Height of a BST}
-the height of a BST with $n$ elements 
+The height of a BST with $n$ elements 
 \begin{itemize}
-\item average case: $O(log_2n)$
-\item worst case: $O(n)$
+\item Average case: $O(log_2n)$
+\item Worst case: $O(n)$
   \begin{itemize}
   \item e.g., use \texttt{insert\_node} to insert the keys $1, 2, 3, \ldots, n$ into an
     initially empty BST
@@ -1187,8 +1187,8 @@ the height of a BST with $n$ elements
 \begin{frame}[t]
   \frametitle{Balanced (binary) Search Tree}
   \begin{itemize}
-  \item worst case height: $O(log_2n)$
-  \item searching, insertion, deletion is bounded by $O(h)$ where h is
+  \item Worst case height: $O(log_2n)$
+  \item Searching, insertion, deletion is bounded by $O(h)$ where h is
     the height of a binary tree
   \item \textit{AVL tree, 2-3 tree, red-black tree
     are all introduced in Chapter 10}
