--- a/DSA10-Graph3/DSA_2017_10.tex
+++ b/DSA10-Graph3/DSA_2017_10.tex
@@ -38,6 +38,17 @@
 
 
 %---------------------------------------------------------
+%add page -4p KSS-
+\section{Review: Kruskal's Algorithm}
+\begin{frame}[t, fragile]
+	\frametitle{Kruskal's algorithm}
+	Kruskal's algorithm builds a minimum cost spanning tree T by adding edges to T one at a time.
+	\begin{itemize}
+		\item The algorithm selects the edges for inclusion in T in nondecreasing order of their cost.
+		\item  An edge is added to T if it does not form a cycle with the edges that are already in T.
+		\item  Since G is connected and has n>0 vertices, exactly n-1 edges will be selected for inclusion in T.
+	\end{itemize} 
+\end{frame}
 
 \section{The code: Kruskal's Algorithm}
 \begin{frame}[t, fragile]
