--- a/style/beamerthemesthlm.sty
+++ b/style/beamerthemesthlm.sty
@@ -386,10 +386,10 @@ aboveskip=1em
     \progressbar@tmpcounta=\insertframenumber
     \progressbar@tmpcountb=\inserttotalframenumber
     \progressbar@tmpdim=\progressbar@pbwd
-    \divide\progressbar@tmpdim by 10000
+    \divide\progressbar@tmpdim by 100000
     \multiply\progressbar@tmpdim by \progressbar@tmpcounta
     \divide\progressbar@tmpdim by \progressbar@tmpcountb
-    \multiply\progressbar@tmpdim by 10000
+    \multiply\progressbar@tmpdim by 100000
     \fontsize{1em}{1em}\selectfont
 
     \makebox[\textwidth][c]{
@@ -413,10 +413,10 @@ aboveskip=1em
     \progressbar@tmpcounta=\insertframenumber
     \progressbar@tmpcountb=\inserttotalframenumber
     \progressbar@tmpdim=\progressbar@pbwd
-    \divide\progressbar@tmpdim by 10000
+    \divide\progressbar@tmpdim by 100000
     \multiply\progressbar@tmpdim by \progressbar@tmpcounta
     \divide\progressbar@tmpdim by \progressbar@tmpcountb
-    \multiply\progressbar@tmpdim by 10000
+    \multiply\progressbar@tmpdim by 100000
     \fontsize{1em}{1em}\selectfont
 
     \makebox[\textwidth][c]{
@@ -440,10 +440,10 @@ aboveskip=1em
   \progressbar@tmpcounta=\insertframenumber
   \progressbar@tmpcountb=\inserttotalframenumber
   \progressbar@tmpdim=\paperwidth
-  \divide\progressbar@tmpdim by 10000 
+  \divide\progressbar@tmpdim by 10000000 
   \multiply\progressbar@tmpdim by \progressbar@tmpcounta
   \divide\progressbar@tmpdim by \progressbar@tmpcountb
-  \multiply\progressbar@tmpdim by 10000 
+  \multiply\progressbar@tmpdim by 1000000 
   {%
     \usebeamercolor{palette quaternary}%
     \begin{tikzpicture}[tight background]
