Chapter 1 typo revised

--- a/style/beamerthemesthlm.sty
+++ b/style/beamerthemesthlm.sty
@@ -205,6 +205,7 @@ escapechar=~,
 aboveskip=1em,
 keywordstyle=,
 numbers=left,
+lineskip=-1pt,
 stepnumber=1,
 showspaces=false,
 showstringspaces=false,
