--- a/DSA01-Intro/DSA_01.tex
+++ b/DSA01-Intro/DSA_01.tex
@@ -349,7 +349,7 @@ int compare(int x, int y){
 \end{itemize}
 
 \begin{codedef}
-#define COMPARE(x,y) (((x) < (y) ?-1:  (x) == (y))? 0: 1)
+#define COMPARE(x,y) ((x) < (y) ? (-1): ((x) == (y) ? 0: 1))
 \end{codedef}
 
 \end{frame}
