Chapter 3 Typo Revised

--- a/DSA03-Array/DSA_03.tex
+++ b/DSA03-Array/DSA_03.tex
@@ -814,7 +814,7 @@ Other considerations
 \begin{itemize}
   \item We want transpose operation to work efficiently, we should organize the triples so that the row indices are in ascending order
   \item Also requiring that all the triples for any row be stored so that the column indices are in ascending order
-  \item To ensure that the operations teminate, we must know the number of rows and columns, and the number of nonzero elements in the matrix
+  \item To ensure that the operations terminate, we must know the number of rows and columns, and the number of nonzero elements in the matrix
 \end{itemize}
 
 
